--- a/controller.yaml
+++ b/controller.yaml
@@ -3,12 +3,12 @@ removeStrategy:
   items: NONE
 items:
 - kind: folder
-  name: REPLACE_FOLDER_NAME
+  name: nac-declarative-pipeline-12-5-2022
   groups:
   - members:
       users:
-      - REPLACE_GITHUB_USERNAME
-      - REPLACE_GITHUB_USERNAME-admin
+      - nchoudhury-cb
+      - nchoudhury-cb-admin
     roles:
     - name: browse
       grantedAt: current
@@ -20,12 +20,16 @@ items:
   - browse
   items:
   - kind: managedController
-    name: REPLACE_CONTROLLER_NAME
+    name: controller
     properties:
     - healthReporting:
         enabled: true
     - configurationAsCode:
-        bundle: REPLACE_FOLDER_NAME-REPLACE_CONTROLLER_NAME
+        bundle: nac-declarative-pipeline-12-5-2022-controller
+    - optOutProperty:
+        securityEnforcerOptOutMode:
+          authorizationOptOutMode: {
+            }
     configuration:
       kubernetes:
         memory: 4000
@@ -33,8 +37,9 @@ items:
         clusterEndpointId: default
         disk: 10
         storageClassName: premium-rwo
-        domain: REPLACE_FOLDER_NAME-REPLACE_CONTROLLER_NAME
+        domain: nac-declarative-pipeline-12-5-2022-controller
         namespace: controllers
+        javaOptions: -Dorg.jenkinsci.plugins.workflow.cps.DSL.UNSAFE_GROOVY_INTERPOLATION=fail
         yaml: |
           kind: "StatefulSet"
           spec:
@@ -49,21 +54,21 @@ items:
                   - name: "SECRETS"
                     value: "/var/jenkins_home/jcasc_secrets"
                   - name: "CONTROLLER_NAME"
-                    value: "REPLACE_CONTROLLER_NAME"
+                    value: "controller"
                   - name: "GITHUB_ORGANIZATION"
-                    value: "REPLACE_GITHUB_ORG"
+                    value: "nac-declarative-pipeline-12-5-2022"
                   - name: "GITHUB_USER"
-                    value: "REPLACE_GITHUB_USERNAME"
+                    value: "nchoudhury-cb"
                   - name: "GITHUB_APP"
-                    value: "REPLACE_GITHUB_APP"
+                    value: "cloudbees-ci-pipeline-workshop"
                   - name: "GITHUB_APP_ID"
-                    value: "REPLACE_GITHUB_APP_ID"
+                    value: ""
                   - name: "CONTROLLER_SUBDOMAIN"
-                    value: "REPLACE_FOLDER_NAME-REPLACE_CONTROLLER_NAME"
+                    value: "nac-declarative-pipeline-12-5-2022-controller"
                   - name: "CASC_BUNDLE_ID"
-                    value: "REPLACE_FOLDER_NAME-REPLACE_CONTROLLER_NAME"
+                    value: "nac-declarative-pipeline-12-5-2022-controller"
                   - name: "AVAILABILITY_PATTERN"
-                    value: "REPLACE_AVAILABILITY_PATTERN"
+                    value: "cloudbees-ci-pipeline-workshop/nac-declarative-pipeline-12-5-2022/controller"
                   volumeMounts:
                   - name: "jcasc-secrets"
                     mountPath: "/var/jenkins_home/jcasc_secrets"
